--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ prost = "0.10"
 tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
 #tokio = { version = "1", features = ["full"], optional = true }
 #tokio = { version = "1", features = ["io-std", "net"], optional = true }
+tokio-socketcan = "0.3.1"
 futures = { version = "0.3" }
 gpio-cdev = { version = "0.5", features = ["async-tokio"] }
 serde = "1.0.97"
@@ -28,7 +29,8 @@ async-std = "1.11.0"
 rand = "0.8"
 #reqwest = "0.11"
 
-# [dev-dependencies]
+[dev-dependencies]
+futures-util = "0.3"
 # quicli = "0.4"
 # structopt = "0.3"
 # anyhow = "1.0"
