--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,44 +1,42 @@
 [package]
-name = "client"
+name = "ada-client"
+description = "A signal monitor and grpc client for GNU/Linux"
+homepage = "https://hostmobility.com"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[[bin]] # Bin to run the digital gRPC client
-name = "client"
+[[bin]]
+name = "ada-client"
 path = "src/main.rs"
 
 [dependencies]
-tonic = { version = "0.7", features = ["tls"] }
-prost = "0.10"
-tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
+tonic = { version = "0.8.1", features = ["tls"] }
+prost = "0.11"
+tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
 #tokio = { version = "1", features = ["full"], optional = true }
 #tokio = { version = "1", features = ["io-std", "net"], optional = true }
 tokio-socketcan = "0.3.1"
-futures = { version = "0.3" }
-gpio-cdev = { version = "0.5", features = ["async-tokio"] }
-serde = "1.0.97"
-toml = "0.5"
-indexmap = { version = "1.0", optional = true }
-serde_derive = "1.0"
-bitflags = "1.3"
-libc = "0.2"
-nix = "0.23"
-async-std = "1.11.0"
-rand = "0.8"
+futures = { version = "0.3.24" }
+gpio-cdev = { version = "0.5.1", features = ["async-tokio"] }
+serde = "1.0.144"
+toml = "0.5.9"
+indexmap = { version = "1.9.1", optional = true }
+serde_derive = "1.0.144"
+bitflags = "1.3.2"
+libc = "0.2.132"
+nix = "0.25.0"
+async-std = "1.12.0"
+rand = "0.8.5"
 #reqwest = "0.11"
 home = "0.5.3"
 
 [dev-dependencies]
-futures-util = "0.3"
-# quicli = "0.4"
-# structopt = "0.3"
-# anyhow = "1.0"
-# tokio = { version = "1", features = ["io-std", "rt-multi-thread", "macros", "net"] }
+futures-util = "0.3.24"
 
 [build-dependencies]
-tonic-build = "0.7"
+tonic-build = "0.8.0"
 
 [features]
 default = []
