--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ async-std = "1.12.0"
 rand = "0.8.5"
 #reqwest = "0.11"
 home = "0.5.3"
+can-dbc = "5.0.0"
+codegen = "0.2.0"
 
 [dev-dependencies]
 futures-util = "0.3.24"
