Move config to lazy static and UID to header
refac: Config data is used everywhere and it's inconvenient having to pass it
around.

feat: Send the UID of the client in each message header. This lets us
remove it from the actual data and thus simplify the proto files.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ rand = "0.8.5"
 home = "0.5.3"
 can-dbc = "5.0.0"
 codegen = "0.2.0"
+lazy_static = "1.4.0"
 
 [dev-dependencies]
 futures-util = "0.3.24"
