--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ name = "ada-client"
 path = "src/main.rs"
 
 [dependencies]
+async-lock = "2.6.0"
 tonic = { version = "0.8.1", features = ["tls"] }
 prost = "0.11"
 tokio = { version = "1.21.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
