--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ path = "src/main.rs"
 
 [dependencies]
 async-lock = "2.6.0"
+clap = { version = "4.0.32", features = ["cargo"] }
 tonic = { version = "0.8.3", features = ["tls"] }
 prost = "0.11.3"
 tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
