--- a/scripts/ada-client.service
+++ b/scripts/ada-client.service
@@ -1,12 +1,12 @@
 [Unit]
 Description=Ada client service
-OnFailure=ada-client-exit-handler.service
 
 [Service]
 Restart=always
 RestartPreventExitStatus=62
 RestartSec=10
 ExecStart=/opt/ada-client/ada-client
+ExecStopPost=/opt/ada-client/exit-handler.sh
 
 [Install]
 WantedBy=multi-user.target
