Rename application: HOST Insight Client
Host Mobility has decided to name the application HOST
Insight. Replace "Ada" with "Host Insight" but keep Client.

For now, keep "Ada" for protobuf.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@
 # Inc., 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301  USA
 
 [package]
-name = "ada-client"
+name = "host-insight-client"
 description = "A remote I/O client for GNU/Linux"
 homepage = "https://github.com/hostmobility"
 version = "0.3.0"
