--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,12 +18,12 @@
 name = "host-insight-client"
 description = "A remote I/O client for GNU/Linux"
 homepage = "https://github.com/hostmobility"
-version = "0.4.0"
+version = "0.4.1"
 edition = "2021"
 license = "GPL-3.0-or-later"
 
 [[bin]]
-name = "ada-client"
+name = "host-insight-client"
 path = "src/main.rs"
 
 [dependencies]
