--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "proto"]
 	path = proto
-	url = git@gitlab.com:hostmobility/ada/proto.git
+	url = git@github.com:hostmobility/host-insight-proto.git
