refac: Break up main.rs into multiple files
Create the following modules:

- can.rs
- gpio.rs
- lib.rs
- net.rs
- utils.rs

In addition:

- make dependency references more compact
- simplify the main function
- other minor refactoring

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ version = "0.4.7"
 edition = "2021"
 license = "GPL-3.0-or-later"
 
+[lib]
+name = "lib"
+path = "src/lib.rs"
+
 [[bin]]
 name = "host-insight-client"
 path = "src/main.rs"
