Fix software updates and remove dependency on opkg
It's impossible to upgrade the running client application by fetching a new
version of itself.  Instead, let the insight helper script do it.

- Rename ErrorCodes -> ExitCodes and add a code for software updates.
- Call host-insight-helper to perform the update
- Don't panic if software update fails. This is to prevent entering a
  reboot loop.
- Remove all opkg commands from the client
- Use anyhow for custom error messages

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,7 @@ name = "host-insight-client"
 path = "src/main.rs"
 
 [dependencies]
+anyhow = "1.0.75"
 async-lock = "2.6.0"
 clap = { version = "3.2.23", features = ["cargo"] }
 tonic = { version = "0.8.2", features = ["tls"] }
