--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,35 +31,34 @@ name = "host-insight-client"
 path = "src/main.rs"
 
 [dependencies]
-anyhow = "1.0.75"
-async-lock = "2.6.0"
-clap = { version = "3.2.23", features = ["cargo"] }
-tonic = { version = "0.8.2", features = ["tls"] }
-prost = "0.11.3"
-tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
+anyhow = "1.0.98"
+async-lock = "3.4.1"
+clap = { version = "4.5.42", features = ["cargo"] }
+tonic = { version = "0.13.1", features = ["tls-ring"] }
+prost = "0.13.5"
+tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-std", "net"] }
 tokio-socketcan = "0.3.1"
 futures = { version = "0.3.25" }
-gpio-cdev = { version = "0.5.1", features = ["async-tokio"] }
-serde = "1.0.150"
-toml = "0.5.9"
-indexmap = { version = "1.9.1", optional = true }
-serde_derive = "1.0.150"
-bitflags = "1.3.2"
-libc = "0.2.132"
-nix = "0.26.1"
-async-std = "1.12.0"
-rand = "0.8.5"
-home = "0.5.4"
+gpio-cdev = { version = "0.6.0", features = ["async-tokio"] }
+serde = "1.0.219"
+toml = "0.9.5"
+indexmap = { version = "2.10.0", optional = true }
+serde_derive = "1.0.219"
+bitflags = "2.9.1"
+libc = "0.2.174"
+nix = "0.30.1"
+async-std = "1.13.1"
+rand = "0.9.2"
 can-dbc = "5.0.0"
 codegen = "0.2.0"
-lazy_static = "1.4.0"
+lazy_static = "1.5.0"
 
 [dev-dependencies]
-futures-util = "0.3.25"
+futures-util = "0.3.31"
 
 [build-dependencies]
-tonic-build = "0.8.4"
-prost-build = "0.11.4"
+tonic-build = "0.13.1"
+prost-build = "0.13.5"
 
 [features]
 default = []
